@startuml classDiagram
title TSW Controller – Class Architecture (v6 - 2025-12-25)

skinparam classAttributeIconSize 0
skinparam linetype ortho

/' ========================
   Base Hardware Layer
   ======================== '/

interface Control <<interface>> {
  - controlId : String
  - pin : uint8_t
  --
  + getId() : String
  + getPin() : uint8_t
  + begin() : void
  + update() : bool
  + getValue() : float
}

package "Hardware Controls" as hw <<Rectangle>> {

  class AnalogSlider {
    - minValue : int
    - maxValue : int
    - zero : int
    - lastValue : int
    - lastRaw : int
    - rawThreshold : int
    - inverted : bool
    - lastRead : unsigned long
    - interval : unsigned long
    --
    + AnalogSlider(id, gpio)
    + begin() : void
    + update() : bool
    + getValue() : float
    + getRawValue() : int
    + getPercentValue() : int
    + setInverted(inv) : void
    + setRawThreshold(t) : void
  }

  class Button {
    - lastStableState : bool
    - lastReading : bool
    - lastDebounceTime : unsigned long
    - debounceDelay : unsigned int
    - lastEvent : int
    --
    + Button(id, gpio, debounce)
    + begin() : void
    + update() : bool
    + getValue() : float
    + isPressed() : bool
    + getEvent() : int
  }

  class RotaryKnob {
    - pinA : uint8_t
    - pinB : uint8_t
    - position : int
    - lastDelta : int
    --
    + RotaryKnob(id, a, b, debounceMs)
    + begin() : void
    + update() : bool
    + getValue() : float
    + getPosition() : int
    + reset() : void
    + getLastDelta() : int
  }

  class GamepadJoystick {
    - xPin, yPin : uint8_t
    - xRaw, yRaw : int
    - xZero, yZero : int
    - buttonPressed : bool
    --
    + GamepadJoystick(id, x, y, button)
    + begin() : void
    + update() : bool
    + getValue() : float
    + getXCentered() : int
    + getYCentered() : int
    + isPressed() : bool
    + calibrateCenter() : void
  }

  class MCPButtonArray {
    - spiPins[4] : uint8_t
    - mcp1, mcp2 : MCP23S17
    - expanders[] : MCP23S17*
    - states[] : bool
    - lastReading : uint32_t
    - changedPins : uint32_t
    - debounceDelayMs : unsigned int
    --
    + MCPButtonArray(idPrefix, debounceMs)
    + begin() : void
    + update() : bool
    + getValue() : float
    + getButtonState(index) : bool
    + getLastReading() : uint32_t
    + getChangedPins() : uint32_t
  }
  note left of MCPButtonArray
    Hardware layer for MCP23S17 expanders.
    Shared instance used by TSWMCPButton.
    Handles SPI communication & debouncing.
  end note
}

package "TSW Layer" as tsw <<Rectangle>> {

  /' ========================
     Mapping & Network
     ======================== '/

  class Notch <<struct>> {
    + label : String
    + tswValue : float
    + rangeMin : int
    + rangeMax : int
  }

  class NotchTable {
    - controller : String
    - label : String
    - positions : vector<Notch>
    --
    + loadFromFile(path) : bool
    + loadFromArray(list) : bool
    + hasPositions() : bool
    + getPositionCount() : size_t
    + mapToTSW(percent) : float
    + getControllerName() : String
    + setControllerName(name) : void
    + setupBinaryButton(name, released, pressed) : void
    + toJson(doc) : void
  }

  class TSWSpider {
    - host : String
    - dtgCommKey : String
    - port : uint16_t
    --
    + begin(ip, port) : void
    + setControllerValue(controller, value) : bool
    + getControllerValue(controller) : float
  }
  note bottom of TSWSpider
    HTTP client for TSW API.
    Uses DTGCommKey for authentication.
    Host/port loaded from config.json.
  end note

  /' ========================
     TSW Application Layer
     ======================== '/

  abstract class TSWControl {
    # id : String
    # notches : NotchTable
    # spider : TSWSpider*
    # lastSentValue : float
    --
    + TSWControl(id, ctrl, spider)
    + loadNotches(filePath) : void
    + getId() : String
    + getControllerName() : String
    + setControllerName(ctrl) : void
    + {abstract} getControlType() : String
    + {abstract} getHardwareType() : String
    + {virtual} toJson(doc) : void
    # sendValueToTSW(tswValue) : void
    ..
    {abstract} + updateAndSend() : void
  }
  note right of TSWControl
    Abstract base for all TSW controls.
    controllerName is stored in NotchTable
    (single source of truth).
    toJson() enables REST API for
    Angular configuration UI.
  end note

  class TSWLever {
    - lastSentValue : float
    --
    + TSWLever(pin, ctrl, spider)
    + loadNotches(filePath) : void
    + updateAndSend() : void
    + setInverted(inv) : void
  }

  class TSWButton {
    - lastSentValue : float
    --
    + TSWButton(pin, ctrl, spider)
    + loadNotches(filePath) : void
    + updateAndSend() : void
  }

  class TSWRotaryKnob {
    --
    + TSWRotaryKnob(pinA, pinB, ctrl, spider)
    + updateAndSend() : void
  }

  class TSWMCPButton {
    - buttonArrayRef : MCPButtonArray*
    - buttonIndex : uint8_t
    - lastState : bool
    --
    + TSWMCPButton(id, spider, buttonArray, index)
    + getButtonIndex() : uint8_t
    + hasChanged() : bool
    + isPressed() : bool
    + updateAndSend() : void
    + setMapping(released, pressed) : void
  }
  note bottom of TSWMCPButton
    Virtual button referencing a
    single pin in shared MCPButtonArray.
    Enables per-button configuration.
  end note

  class TSWGamePadControl {
    - gamepad : GamepadJoystick
    - hasButton : bool
    - notchX : NotchTable
    - notchY : NotchTable
    - buttonNotches : NotchTable
    - lastSentTime : unsigned long
    - sendInterval : unsigned long
    --
    + TSWGamePadControl(id, pinX, pinY, pinBtn, ctrlX, ctrlY, ctrlBtn, spider, sendInt)
    + begin() : void
    + loadNotchesX(file) : void
    + loadNotchesY(file) : void
    + loadButtonNotches(file) : void
    + updateAndSend() : void
    + setControllerX(ctrl) : void
    + setControllerY(ctrl) : void
    + setControllerButton(ctrl) : void
    + getControllerX() : String
    + getControllerY() : String
    + getControllerButton() : String
    + setXInverted(inv) : void
    + setYInverted(inv) : void
  }
  note bottom of TSWGamePadControl
    3-axis control (X, Y, Button).
    Each axis stores its controllerName
    in its own NotchTable.
  end note
}



/' ========================
   Relationships
   ======================== '/

' Hardware inheritance
Control <|-down- AnalogSlider
Control <|-down- Button
Control <|-down- RotaryKnob
Control <|-down- GamepadJoystick
Control <|-down- MCPButtonArray
' TSW inheritance
TSWControl <|-up- TSWLever
TSWControl <|-up- TSWButton
TSWControl <|-up- TSWRotaryKnob
TSWControl <|-up- TSWMCPButton
TSWControl <|-up- TSWGamePadControl

' Multi-inheritance (hardware + TSW)
AnalogSlider <|-down- TSWLever
Button <|-down- TSWButton
RotaryKnob <|-down- TSWRotaryKnob
GamepadJoystick <|-down- TSWGamePadControl

' Compositions & dependencies
TSWControl *-right- NotchTable : has
TSWControl -down-> TSWSpider : uses
NotchTable *-down- Notch : contains

' MCPButton references shared array (not owns)
TSWMCPButton o-down-> MCPButtonArray : references

' GamePad compositions
TSWGamePadControl *-up- AnalogSlider : axisX/axisY
TSWGamePadControl *-up- Button : optional
TSWGamePadControl *-down- NotchTable : axis/button mappings

@enduml
